# gpt4all.net.Runtime

./: .gitignore  .gitmodules
core/: CMakeLists.txt  Makefile  Toolchain-linux-arm64.cmake  Toolchain-linux-x64.cmake  build_windows_arm64.bat  build_windows_x64.bat  build_windows_x64_mingw.bat  build_windows_x64_msvc.bat  gpt4all.net.runtime.nuspec  lipo_setup.zsh  rpath_setup.zsh
core/gpt4all.net.Runtime/: gpt4all.net.Runtime.targets
core/gpt4all.net.Runtime/ios-device/: libgptj-avxonly.dylib  libgptj-default.dylib  libllama-230511-avxonly.dylib  libllama-230511-default.dylib  libllama-230519-avxonly.dylib  libllama-230519-default.dylib  libllama-mainline-avxonly.dylib  libllama-mainline-default.dylib  libllama-mainline-metal.dylib  libllama.dylib  libllamamodel-230511-avxonly.dylib  libllamamodel-230511-default.dylib  libllamamodel-230519-avxonly.dylib  libllamamodel-230519-default.dylib  libllamamodel-mainline-avxonly.dylib  libllamamodel-mainline-default.dylib  libllamamodel-mainline-metal.dylib  libllmodel.dylib  libmpt-avxonly.dylib  libmpt-default.dylib
core/gpt4all.net.Runtime/ios-simulator/: libgptj-avxonly.dylib  libgptj-default.dylib  libllama-230511-avxonly.dylib  libllama-230511-default.dylib  libllama-230519-avxonly.dylib  libllama-230519-default.dylib  libllama-mainline-avxonly.dylib  libllama-mainline-default.dylib  libllama-mainline-metal.dylib  libllama.dylib  libllamamodel-230511-avxonly.dylib  libllamamodel-230511-default.dylib  libllamamodel-230519-avxonly.dylib  libllamamodel-230519-default.dylib  libllamamodel-mainline-avxonly.dylib  (+5 more)
(+78 files in other folders)
